; ModuleID = '/home/carl/AnghaBench/vlc/modules/audio_output/extr_directsound.c_CreateDSBufferPCM.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/audio_output/extr_directsound.c_CreateDSBufferPCM.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"directx-audio-float32\00", align 1
@VLC_CODEC_FL32 = common dso_local global i32 0, align 4
@DS_OK = common dso_local global i64 0, align 8
@VLC_CODEC_S16N = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32*, i32*, i32, i32, i32)* @CreateDSBufferPCM to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @CreateDSBufferPCM(i32* %0, i32* %1, i32* %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %16 = load i32, i32* %11, align 4
  %17 = call i32 @vlc_popcount(i32 %16)
  store i32 %17, i32* %15, align 4
  %18 = load i32*, i32** %8, align 8
  %19 = call i64 @var_GetBool(i32* %18, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %38

21:                                               ; preds = %6
  %22 = load i32*, i32** %8, align 8
  %23 = load i32*, i32** %9, align 8
  %24 = load i32, i32* @VLC_CODEC_FL32, align 4
  %25 = load i32, i32* %11, align 4
  %26 = load i32, i32* %15, align 4
  %27 = load i32, i32* %12, align 4
  %28 = load i32, i32* %13, align 4
  %29 = call i64 @CreateDSBuffer(i32* %22, i32* %23, i32 %24, i32 %25, i32 %26, i32 %27, i32 %28)
  store i64 %29, i64* %14, align 8
  %30 = load i64, i64* %14, align 8
  %31 = load i64, i64* @DS_OK, align 8
  %32 = icmp eq i64 %30, %31
  br i1 %32, label %33, label %37

33:                                               ; preds = %21
  %34 = load i32, i32* @VLC_CODEC_FL32, align 4
  %35 = load i32*, i32** %10, align 8
  store i32 %34, i32* %35, align 4
  %36 = load i64, i64* @DS_OK, align 8
  store i64 %36, i64* %7, align 8
  br label %56

37:                                               ; preds = %21
  br label %38

38:                                               ; preds = %37, %6
  %39 = load i32*, i32** %8, align 8
  %40 = load i32*, i32** %9, align 8
  %41 = load i32, i32* @VLC_CODEC_S16N, align 4
  %42 = load i32, i32* %11, align 4
  %43 = load i32, i32* %15, align 4
  %44 = load i32, i32* %12, align 4
  %45 = load i32, i32* %13, align 4
  %46 = call i64 @CreateDSBuffer(i32* %39, i32* %40, i32 %41, i32 %42, i32 %43, i32 %44, i32 %45)
  store i64 %46, i64* %14, align 8
  %47 = load i64, i64* %14, align 8
  %48 = load i64, i64* @DS_OK, align 8
  %49 = icmp eq i64 %47, %48
  br i1 %49, label %50, label %54

50:                                               ; preds = %38
  %51 = load i32, i32* @VLC_CODEC_S16N, align 4
  %52 = load i32*, i32** %10, align 8
  store i32 %51, i32* %52, align 4
  %53 = load i64, i64* @DS_OK, align 8
  store i64 %53, i64* %7, align 8
  br label %56

54:                                               ; preds = %38
  %55 = load i64, i64* %14, align 8
  store i64 %55, i64* %7, align 8
  br label %56

56:                                               ; preds = %54, %50, %33
  %57 = load i64, i64* %7, align 8
  ret i64 %57
}

declare dso_local i32 @vlc_popcount(i32) #1

declare dso_local i64 @var_GetBool(i32*, i8*) #1

declare dso_local i64 @CreateDSBuffer(i32*, i32*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
